# AI_Itinerary_Planner

./: .dockerignore  .env.example  .gitignore  README.md  railway.json
data/: README.md  _poi_type_scan.json  india_cities.json  jaipur_pois_seed.json
docs/: deploy-railway.md  deploy-vercel.md  implementationPlan.md  n8n.md  schema.md  (+1 more)
services/agent/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
services/agent/scripts/: test_add_food_edit.py  test_voice_edits.py
services/agent/src/agent/: __init__.py  formatters.py  graph.py  main.py  place_identity.py  preferences.py  smoke_graph.py  smoke_mcp.py  smoke_rag.py  stt.py  stt_normalize.py  trip_limits.py
services/agent/src/agent/mcp/: __init__.py  geo.py  itinerary_builder.py  poi_search.py  poi_shortlist.py  travel_time.py  weather.py
services/agent/src/agent/nodes/: __init__.py  agent_planner.py  edit_apply.py  execution_plan.py  itinerary_optimize.py  llm_utils.py  merger.py  merger_synthesis.py  orchestrator.py  reviewer.py  specialists.py  state_utils.py  synthesis.py  trace.py
services/agent/src/agent/rag/: __init__.py  build_corpus.py  chunking.py  corpus.py  embeddings.py  eval_chunking.py  eval_retrieval.py  fetch_corpus.py  fetch_google_places.py  fetch_osm_facts.py  fetch_tourism.py  fetch_wikipedia_places.py  hours.py  http_util.py  ingest.py  itinerary_place.py  paths.py  retrieve.py
services/agent/src/agent/schemas/: __init__.py  edits.py  itinerary.py  review.py  specialists.py  state.py  validation.py
services/agent/src/agent/tools/: __init__.py  mcp_tools.py
(+94 files in other folders)
