[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-itinerary-agent"
version = "0.1.0"
description = "LangGraph multi-agent service for the AI Itinerary Planner capstone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.4.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.28.0",
]

[project.scripts]
itinerary-agent = "agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]
