[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-itinerary-agent"
version = "0.1.0"
description = "LangGraph multi-agent service for the AI Itinerary Planner capstone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.4.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "google-genai>=1.0.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "chromadb>=0.5.0",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=3.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.28.0",
]

[project.scripts]
itinerary-agent = "agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]
